actual horizontal scroll fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1374,9 +1374,7 @@ form button {
   display: block;
 }
 
-.fb,
-.ig,
-.twitter {
+.social {
   border: solid 2px #ccc;
   border-radius: 15px;
   background-color: #f2f2f2;
@@ -1581,9 +1579,10 @@ input[type=submit] {
     display: flex;
     flex-direction: row;
   }
-  .social-container > div {
-    flex-grow: 4;
-    margin-right: 1rem;
+
+  .social {
+    margin-right: 10px;
+    width: calc(95%/3);
   }
 
   .toggle-wrapper {
