--- a/scss/components/_mediaqueries.scss
+++ b/scss/components/_mediaqueries.scss
@@ -81,10 +81,11 @@
     .social-container {
         display: flex; 
         flex-direction: row;
-        & > div {
-            flex-grow: 4;
-            margin-right: 1rem;
-        }
+
+    }
+    .social {
+        margin-right: 10px;
+        width: calc(95%/3);
     }
 
     .toggle-wrapper {
