--- a/scss/components/_social.scss
+++ b/scss/components/_social.scss
@@ -1,6 +1,4 @@
-.fb,
-.ig,
-.twitter {
+.social {
     border: solid 2px $col-form-borders;
     border-radius: 15px;
     background-color: lighten($col-form-borders, 15%);
